--- a/package.xml
+++ b/package.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0"?>
 <package>
-  <name>rubi_driver</name>
+  <name>rubi_server</name>
   <version>1.0.0</version>
-  <description>The rubi_driver package</description>
+  <description>The rubi_server package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
+  <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="cezar@todo.todo">cezar</maintainer>
+  <maintainer email="ave@cezar.info">cezar</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
-
+  <license>GPLv3</license>
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>rubi_msgs</build_depend>
+  <build_depend>libboost</build_depend>
+  <run_depend>libboost</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
