board wake check added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,7 @@ add_service_files(
   BoardDescriptor.srv
   ShowBoards.srv
   BoardOnline.srv
+  BoardWake.srv
 )
 
 ## Generate actions in the 'action' folder
