--- a/package.xml
+++ b/package.xml
@@ -18,8 +18,8 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>libboost</build_depend>
-  <run_depend>libboost</run_depend>
+  <build_depend>boost</build_depend>
+  <run_depend>boost</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
